Fixed line-spacing on small calendar widget

--- a/assets/stylesheets/existing/temp-content.css
+++ b/assets/stylesheets/existing/temp-content.css
@@ -47,12 +47,16 @@
 	margin: 0;
 	padding: 0;
 }
-#maincontainer
-body, td {
+#maincontainer body, 
+td {
 	font-family : Arial, Helvetica, sans-serif;
 	font-size : 0.96em;
 	color : #444;
 }
+.seBlogViewSmallCal td {
+	line-height: 1;
+}
+
 #TableAlternativeRows caption {
 	font-family : Arial, Helvetica, sans-serif;
 	font-size : 12px;
@@ -294,6 +298,12 @@ body, td {
 	color : #000;
 	font-family : Arial, Helvetica, sans-serif;
 }
+
+.image_right img, .Normal img {
+	border: none;
+	margin: 0;
+	padding: 0;
+}
 #feed_container_right {
 	float : left;
 	display : inline;
@@ -410,4 +420,10 @@ body, td {
 }
 #divclearRight {
 	clear : right;
+}
+
+.seBlogViewLinks img {
+	border: none;
+	padding: 0;
+	margin: 0;
 }
